--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ai Chatbot</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="chat-container">
@@ -20,5 +20,6 @@
         <button id="send-btn">Send</button>
       </div>
     </div>
+    <script type="module" src="script.js"></script>
   </body>
 </html>
